--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -233,6 +233,13 @@
 	url = {http://e-voting.bfh.ch/},
 }
 
+@online{www:playstore,
+	author = {Google},
+	title = {Google Play},
+	date = {2013-12-01},
+	url = {http://play.google.com/},
+}
+
 @book{book:hac,
 	author = {Menezes, Alfred J. and Vanstone, Scott A. and Oorschot, Paul C. Van},
 	title = {Handbook of Applied Cryptography},
